accidentally took away scrollbar, fixed it

--- a/CSS/xs.css
+++ b/CSS/xs.css
@@ -12,7 +12,6 @@ body{
   font-family: Verdana, sans-serif;
   color:#dfdfdf;
   background:#17161a;
-  overflow: hidden;
 }
 
 .body-backgroundobj{
@@ -309,6 +308,7 @@ Retrieved 2026-04-24, License - CC BY-SA 4.0
     }
 
 .footer {
+    border-top: 1px solid #1f2933;
     width: 100%;
     color: #9ca3af;
   }
